[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scripts/characters/character_direction_arrows.gd" type="Script" id=1]
[ext_resource path="res://assets/models/characters/character_direction_arrow/Cube.mesh" type="ArrayMesh" id=2]
[ext_resource path="res://assets/models/shaders/translucent_pulse.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]

render_priority = 0
shader = ExtResource( 3 )
shader_param/enabled = false
shader_param/base_color = Vector3( 0.1, 0.1, 0.1 )
shader_param/glow_color = Vector3( 1, 1, 0 )
shader_param/time_scale = 4.0
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ConvexPolygonShape" id=2]

points = PoolVector3Array( 0, 0.25, 0, 5, 0.25, -5, 5, -0.25, -5, -5, 0.25, -5, -5, -0.25, -5, 0, -0.25, 0 )

[sub_resource type="ShaderMaterial" id=3]

render_priority = 0
shader = ExtResource( 3 )
shader_param/enabled = false
shader_param/base_color = Vector3( 0.1, 0.1, 0.1 )
shader_param/glow_color = Vector3( 1, 1, 0 )
shader_param/time_scale = 4.0
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ConvexPolygonShape" id=4]

points = PoolVector3Array( 0, 0.25, 0, 5, 0.25, 5, 5, -0.25, 5, -5, 0.25, 5, -5, -0.25, 5, 0, -0.25, 0 )

[sub_resource type="ShaderMaterial" id=5]

render_priority = 0
shader = ExtResource( 3 )
shader_param/enabled = false
shader_param/base_color = Vector3( 0.1, 0.1, 0.1 )
shader_param/glow_color = Vector3( 1, 1, 0 )
shader_param/time_scale = 4.0
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ConvexPolygonShape" id=6]

points = PoolVector3Array( 0, 0.25, 0, 5, 0.25, 5, 5, -0.25, 5, 5, 0.25, -5, 5, -0.25, -5, 0, -0.25, 0 )

[sub_resource type="ShaderMaterial" id=7]

render_priority = 0
shader = ExtResource( 3 )
shader_param/enabled = false
shader_param/base_color = Vector3( 0.1, 0.1, 0.1 )
shader_param/glow_color = Vector3( 1, 1, 0 )
shader_param/time_scale = 4.0
_sections_unfolded = [ "shader_param" ]

[sub_resource type="ConvexPolygonShape" id=8]

points = PoolVector3Array( 0, 0.25, 0, -5, 0.25, -5, -5, -0.25, -5, -5, 0.25, 5, -5, -0.25, 5, 0, -0.25, 0 )

[node name="center" type="Node"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="arrows" type="Spatial" parent="." index="0"]

[node name="east_arrow" type="MeshInstance" parent="arrows" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
layers = 1
material_override = null
cast_shadow = 0
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 1 )
_sections_unfolded = [ "Geometry", "Transform", "material" ]

[node name="body" type="StaticBody" parent="arrows/east_arrow" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="col_shape" type="CollisionShape" parent="arrows/east_arrow/body" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2 )
shape = SubResource( 2 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="west_arrow" type="MeshInstance" parent="arrows" index="1"]

transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 2 )
layers = 1
material_override = null
cast_shadow = 0
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 3 )
_sections_unfolded = [ "Geometry", "material" ]

[node name="body" type="StaticBody" parent="arrows/west_arrow" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="col_shape" type="CollisionShape" parent="arrows/west_arrow/body" index="0"]

transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -1.74846e-07, 0, 2 )
shape = SubResource( 4 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="south_arrow" type="MeshInstance" parent="arrows" index="2"]

transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 2, 0, 0 )
layers = 1
material_override = null
cast_shadow = 0
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 5 )
_sections_unfolded = [ "Geometry", "Transform", "material" ]

[node name="body" type="StaticBody" parent="arrows/south_arrow" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="col_shape" type="CollisionShape" parent="arrows/south_arrow/body" index="0"]

transform = Transform( 1.31134e-07, 0, 1, 0, 1, 0, -1, 0, 1.31134e-07, -2.62268e-07, 0, 2 )
shape = SubResource( 6 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="north_arrow" type="MeshInstance" parent="arrows" index="3"]

transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2, 0, 0 )
layers = 1
material_override = null
cast_shadow = 0
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = ExtResource( 2 )
skeleton = NodePath("..")
material/0 = SubResource( 7 )
_sections_unfolded = [ "Geometry", "LOD", "Transform", "material" ]

[node name="mesh" type="StaticBody" parent="arrows/north_arrow" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="col_shape" type="CollisionShape" parent="arrows/north_arrow/mesh" index="0"]

transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -8.74228e-08, 0, 2 )
shape = SubResource( 8 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="cancel" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Cancel"
flat = false
align = 1


